removed z-index from details elements as no longer used.

--- a/css/styles.css
+++ b/css/styles.css
@@ -101,7 +101,6 @@ html {
 .splash {
 	display: block;
 	position: absolute;
-	z-index: 1;
 	width: 100%;
 	height: 100%;
 }
@@ -109,7 +108,6 @@ html {
 .image {
 	grid-area: image;
 	padding-top: 0.62em;
-	z-index: 0;
 }	
 
 .desclist {
@@ -118,7 +116,6 @@ html {
 	grid-template-areas: "dt dd";
 	padding-top: 1em;
 	padding-left: 1em;
-	z-index: 0;
 }
 
 dt::after {
@@ -138,7 +135,6 @@ dt {
 	grid-area: description;
 	padding-top: 2em;
 	padding-left: 1em;
-	z-index: 0;
 }
 
 .hidden {
